--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.composeexamplev3">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".presentation.JetpackComposeApplicationClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,90 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeExampleV3">
         <activity
-            android:name="com.example.animation.AnimationActivityDemo1"
-            android:exported="true"
-            android:label="@string/title_activity_animation_demo1"
-            android:theme="@style/Theme.ComposeExampleV3">
+            android:name=".presentation.ui.post.PostActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.example.moviesDemo.ui.movies2.MainActivity2"
-            android:exported="true"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/Theme.ComposeExampleV3">
-        </activity>
-        <activity
-            android:name="com.example.moviesDemo.ui.movies.MovieDetailActivity"
-            android:exported="false"
-            android:label="@string/title_activity_movie_detail"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.animation.ShapeRotationActivity"
-            android:exported="false"
-            android:label="@string/title_activity_shape_rotation"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.animation.CrossFadeAnimationActivity"
-            android:exported="true"
-            android:label="@string/title_activity_cross_fade_animation"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.alert.AlertDialogActivity"
-            android:exported="true"
-            android:label="@string/title_activity_alert_dialog"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.layout.ScrollableRowActivity"
-            android:exported="true"
-            android:label="@string/title_activity_scrollable_row"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.layout.LazyCoulumActivity"
-            android:exported="false"
-            android:label="@string/title_activity_lazy_coulumn"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.layout.ConstraintLayoutActivity"
-            android:exported="true"
-            android:label="@string/title_activity_constraint_layout"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.ImageActivity"
-            android:exported="true"
-            android:label="@string/title_activity_image"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.layout.BoxActivity"
-            android:exported="true"
-            android:label="@string/title_activity_box"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.text.TextFieldActivity"
-            android:exported="true"
-            android:label="@string/title_activity_text_field"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.text.TextStyleActivity"
-            android:exported="true"
-            android:label="@string/title_activity_text_style"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.text.MessageActivity"
-            android:exported="true"
-            android:label="@string/title_activity_message"
-            android:theme="@style/Theme.ComposeExampleV3" />
-        <activity
-            android:name=".ui.text.SimpleTextActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.ComposeExampleV3" />
     </application>
 
 </manifest>
